# unrealspeccyp

./: CMakeLists.txt  README.md  README_USP  file_type.cpp  file_type.h  options_common.cpp  options_common.h  pico_extras_import.cmake  speccy.cpp  speccy.h  speccy_handler.cpp  std.h
devices/: device.cpp  device.h  memory.cpp  memory.h  ula.cpp  ula.h
devices/input/: kempston_joy.cpp  kempston_joy.h  keyboard.cpp  keyboard.h  tape.cpp  tape.h
devices/sound/: ay.cpp  ay.h  beeper.cpp  beeper.h  device_sound.cpp  device_sound.h
embed_tool/: CMakeLists.txt  main.cpp
khan/: CMakeLists.txt  FindEmbedTool.cmake  fast_ay.S  khan.c  khan.pio  khan_init.cpp  khan_init.h  khan_lib.cpp  khan_lib.h  memmap_khan.ld  ram64k.h  sdl_keys.h  spoon.cpp  ui_font.cpp  z80arm.cpp  z80arm.h  z80khan.S  z80khan.h  z80khan_gen.S  z80t.cpp  z80t.h
khan/games/: games.h  khan128_games.txt  khan128_turbo_games.txt  khan_games.txt
khan/roms/: khan128_roms.txt  khan_roms.txt  roms.h
platform/: io.cpp  io.h  platform.cpp  platform.h
platform/custom_ui/: ui_file_open.cpp  ui_keyboard.cpp
res/: 3D_Pacman_1983_Freddy_Kristiansen.z80  CHRON128.SCL  CHRON128.sna  DOOMDE_1.TAP  DOOM_PD.Z80  Donkey_Kong_1986_Ocean.z80  Hobbit_The_v1.2_1982_Melbourne_House_a.z80  JETSET.TAP  Manic_Miner_1983_Software_Projects.sna  Manic_Miner_1983_Software_Projects.z80  ROBOCOP3.TAP  Star_Wars_1987_Domark.z80  The Sentinel.tzx  aticatac.tap  aticatac.tzx  ay2.z80  bitbang.tap  chase.tap  dandare1.tap  down_abc.tap  foo.tap  g+g.sna  g+g.tap  g+g.tzx  knightlore.sna  knightlore.tzx  shock.tap  steg.tap  thundercats.tap  zxpico.tap
snapshot/: snapshot.cpp  snapshot.h
stream/: CMakeLists.txt  stream.c  stream.h
tools/: io_select.h  list.h  options.cpp  options.h
z80/: z80.cpp  z80.h  z80_op.h  z80_op_cb.h  z80_op_dd.h  z80_op_ddcb.h  z80_op_ed.h  z80_op_fd.h  z80_op_noprefix.h  z80_op_xy.h  z80_opcodes.cpp
